--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-torch==1.9.0
-pandas==1.2.4
+torch==1.9
+pandas==1.3
 sympy==1.8
+tensorboard==2.5
+git+https://github.com/lanpa/tensorboardX.git@Release2.4
+gdown==3.13
